added corosel directive script reference to index

--- a/index.html
+++ b/index.html
@@ -39,14 +39,17 @@
     <script src="restaurant-module.js"></script>
 
     <script src="src/header/read/header-directive.js"></script>
+    <script src="src/restaurant-home/home-directives/welcome-corosel-directive/welcome-corosel-directive.js"></script>
+
 
 </head>
 
 <body ng-app="restaurantModule">
+    <div class= "hero_area">
     <restaurant-header></restaurant-header>
 
         <ui-view></ui-view>
-
+    </div>
 <!--
     <div ng-include="'./src/restaurant-home/read/restaurant-home-view.html'">
 -->
