--- a/index.html
+++ b/index.html
@@ -34,22 +34,21 @@
     <script src="node_modules/angular/angular.js"></script>
 
     <script src="node_modules/angular-ui-router/release/angular-ui-router.js"></script>
-    
+
     <!-- Main module file-->
     <script src="restaurant-module.js"></script>
 
     <script src="src/header/read/header-directive.js"></script>
     <script src="src/restaurant-home/home-directives/welcome-corosel-directive/welcome-corosel-directive.js"></script>
-
+    <script src ="src/restaurant-home/home-directives/booking-area-directive/booking-area-directive.js"></script>
 
 </head>
 
 <body ng-app="restaurantModule">
     <div class= "hero_area">
     <restaurant-header></restaurant-header>
-
-        <ui-view></ui-view>
     </div>
+    <ui-view></ui-view>
 <!--
     <div ng-include="'./src/restaurant-home/read/restaurant-home-view.html'">
 -->
