--- a/src/header/read/header-view.html
+++ b/src/header/read/header-view.html
@@ -25,7 +25,7 @@
                 <div class="col-sm-5">
                     <nav class="menu_bar"><div class="slicknav_menu"><a href="#" aria-haspopup="true" role="button" tabindex="0" class="slicknav_btn slicknav_collapsed" style="outline: none;"><span class="slicknav_menutxt"></span><span class="slicknav_icon slicknav_no-text"><span class="slicknav_icon-bar"></span><span class="slicknav_icon-bar"></span><span class="slicknav_icon-bar"></span></span></a><ul class="slicknav_nav slicknav_hidden" aria-hidden="true" role="menu" style="display: none;">
                         <li><a ui-sref="home" role="menuitem" tabindex="-1">HOME</a></li>
-                        <li><a href="about.html" role="menuitem" tabindex="-1">ABOUT</a></li>
+                        <li><a ui-sref="about" role="menuitem" tabindex="-1">ABOUT</a></li>
                         <li><a href="food_menu.html" role="menuitem" tabindex="-1">MENU</a></li>
                         <li class="slicknav_collapsed slicknav_parent"><a href="#" role="menuitem" aria-haspopup="true" tabindex="-1" class="slicknav_item slicknav_row" style="outline: none;"><a href="#" tabindex="-1">PAGES</a>
                             <span class="slicknav_arrow">►</span></a><ul class="sub_menu slicknav_hidden" role="menu" aria-hidden="true" style="display: none;">
@@ -50,8 +50,8 @@
                         <li><a href="contact.html" role="menuitem" tabindex="-1">CONTACT</a></li>
                     </ul></div>
                         <ul class="main_menu">
-                            <li><a href="index-2.html">HOME</a></li>
-                            <li><a href="about.html">ABOUT</a></li>
+                            <li><a ui-sref="home">HOME</a></li>
+                            <li><a ui-sref="about">ABOUT</a></li>
                             <li><a href="food_menu.html">MENU</a></li>
                             <li><a href="#">PAGES</a>
                                 <ul class="sub_menu">
