--- a/src/restaurant-home/read/restaurant-home-view.html
+++ b/src/restaurant-home/read/restaurant-home-view.html
@@ -264,51 +264,9 @@
 </div>
 <!--special_food area end-->
 
-<!--booking area start-->
-<div class="booking_area parallax">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="section_tittle">
-                    <i class="icon" style="background-image:url(img/tittle_icon.png)"></i>
-                    <div class="section_tittle_content">
-                        <h1>BOOKING TABEL</h1>
-                        <span>Duis autem vel eum iriure dolor in hendrerit in vulputate velit.</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <form action="#" class="booking_form wow fadeIn">
-            <div class="row">
-                <div class="col-sm-4">
-                    <input type="text" placeholder="Name">
-                </div>
-                <div class="col-sm-4">
-                    <input type="email" placeholder="Email">
-                </div>
-                <div class="col-sm-4">
-                    <input type="text" placeholder="Occation">
-                </div>
-                <div class="col-sm-4">
-                    <input type="text" placeholder="Phone">
-                </div>
-                <div class="col-sm-4">
-                    <input type="text" placeholder="DD-MM-YY">
-                </div>
-                <div class="col-sm-4">
-                    <input type="text" placeholder="Parson">
-                </div>
-                <div class="col-sm-12">
-                    <textarea placeholder="Message.."></textarea>
-                </div>
-                <div class="col-sm-12">
-                    <a href="#" class="custom_btn">SUBMIT</a>
-                </div>
-            </div>
-        </form>
-    </div>
-</div>
-<!--booking area end-->
+
+<!--Booking area directive -->
+<booking-area></booking-area>
 
 <!--set_menu area start-->
 <div class="set_menu_area">
