--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
     <script src="src/restaurant-home/home-directives/welcome-corosel-directive/welcome-corosel-directive.js"></script>
     <script src ="src/restaurant-home/home-directives/booking-area-directive/booking-area-directive.js"></script>
 
+    <script src ="src/restaurant-home/home-directives/booking-area-directive/bookAreaContoller.js"></script>
+
 </head>
 
 <body ng-app="restaurantModule">
