--- a/src/header/read/header-view.html
+++ b/src/header/read/header-view.html
@@ -12,7 +12,7 @@
                             <span class="header_time">
                                OPENING HOUR : SUNDAT - FRIDAY  | 9 AM - 10 PM
                            </span>
-                    <a href="cart.html" class="cart_btn">
+                    <a ui-sref = "cart" href="/cart" class="cart_btn">
                         CART<i class="fa fa-cart-arrow-down" aria-hidden="true"></i> <span class="cart_quentity">2</span>
                     </a>
                 </div>
