Added the service and restarant -mock servioes ,REST API

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <!-- Main module file-->
     <script src="restaurant-module.js"></script>
 
+    <script src ="service/http-service/restaurant-http-service.js"></script>
     <script src="src/header/read/header-directive.js"></script>
     <script src="src/restaurant-home/home-directives/welcome-corosel-directive/welcome-corosel-directive.js"></script>
     <script src ="src/restaurant-home/home-directives/booking-area-directive/booking-area-directive.js"></script>
